fixed bonus setup

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,3 +31,16 @@ libft:
 	done
 	@ar rcs ./libft/libft.a ./libft/*.o
 	@make clean
+
+libftprintf_bonus:
+	@for file_source in ./bonus/*.c; do \
+		file_obj="./bonus/$$(basename $${file_source%.c}).o"; \
+		cc -Wall -Wextra -Werror -g -c "$${file_source}" -o "$${file_obj}"; \
+	done
+	@ar rcs ./bonus/libftprintf_bonus.a ./bonus/*.o
+	@make clean
+
+bonus: libft libftprintf_bonus obj_files.o
+	@ar x ./libft/libft.a
+	@ar x ./bonus/libftprintf_bonus.a
+	@ar rcs ./$(NAME) ./*.o
