--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "libftprintf.h": "c"
+        "libftprintf.h": "c",
+        "random": "c",
+        "ft_printf.h": "c",
+        "stdio.h": "c",
+        "libft.h": "c"
     }
 }
